# Clinical-Deterioration-AI-Agent

./: README.md  pyproject.toml
models/: logistic_regression (1).pkl  xgboost (1).pkl
notebooks/: Health care -Warning AI.ipynb
src/clinical_deterioration_ai/: __init__.py  api.py  model.py  predictor.py  preprocess.py  utils.py
tests/: LICENSE  test_predictor.py
